--- a/Cronometro/styles.css
+++ b/Cronometro/styles.css
@@ -21,6 +21,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: white;
+  border-radius: 30px;
 }
 .contenedor-botones {
   padding: 20px;
@@ -39,6 +40,11 @@ body {
   font-size: 50px;
   margin: 10px;
   padding: 10px; 
+}
+.boton:hover {
+  cursor: grab;
+  border: 2px solid #48e;
+  box-shadow: 3px 3px #48e;
 }
 #boton-inicio-pausa.iniciar,
 #boton-inicio-pausa.iniciar i {
